✨ Save content and cover to file

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ SPOTIPY_CLIENT_SECRET="Add your client secret here"
 SPOTIPY_REDIRECT_URI="http://localhost:16052"
 
 REFRESH_RATE=5  # seconds
+COVER_SIZE=1  # 0: small (64px), 1: medium (300px), 2: large (640px)
+
+OUTPUT_FORMAT="\"{TITLE}\" - {ARTIST} ({CURRENT}/{DURATION})"
+OUTPUT_FOLDER="output"
+OUTPUT_FILE="track.txt"
+OUTPUT_COVER="cover.jpg"
