💥 🚚 ✨ Structure code & **add local server rendering**

--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,17 @@ SPOTIPY_CLIENT_ID="Add your client id here"
 SPOTIPY_CLIENT_SECRET="Add your client secret here"
 SPOTIPY_REDIRECT_URI="http://localhost:16052"
 
-ASYNC_FETCHING=1  # 0: disable, 1: enable
 REFRESH_RATE=5  # seconds
 COVER_SIZE=1  # 0: small (64px), 1: medium (300px), 2: large (640px)
 
 OUTPUT_FORMAT="\"{TITLE}\" - {ARTIST} ({CURRENT}/{DURATION})"
+EXPORT_FORMAT=0  # 0: local files, 1: local server
+
+# < FILE EXPORT >
 OUTPUT_FOLDER="output"
 OUTPUT_FILE="track.txt"
 OUTPUT_COVER="cover.jpg"
+
+# < LOCAL SERVER >
+SERVER_HOST="127.0.0.1"
+SERVER_PORT=16053
