🚸 Add option to disable console echo

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ SPOTIPY_CLIENT_ID="Add your client id here"
 SPOTIPY_CLIENT_SECRET="Add your client secret here"
 SPOTIPY_REDIRECT_URI="http://localhost:16052"
 
+CONSOLE_ECHO=0  # 0: off, 1: on
 REFRESH_RATE=5  # seconds
 COVER_SIZE=1  # 0: small (64px), 1: medium (300px), 2: large (640px)
 
